--- a/projectEnglish.html
+++ b/projectEnglish.html
@@ -75,7 +75,7 @@
 
     <section class="normal1">
         <div class="images">
-        <img src="/images/reulock.jpg" alt="Projects">
+        <img src="./images/reulock.jpg" alt="Projects">
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
@@ -88,7 +88,7 @@
             <p>As <strong>Project Leader</strong>, I led a team in designing an innovative electronic locking solution for Réutec's reusable packages. Our solution, powered by a 12V AC supply and a universal plug, eliminated the need for an integrated battery. Users simply scanned the QR-CODE, obtained their code on the platform, plugged the package to the supply, and entered the code to open it. I gained valuable technical skills such as <strong>microcontroller programming</strong>, <strong>Computer-Aided Design</strong> (CAD), and <strong>electronic circuit design</strong>. I also developed project management, organization, teamwork, and time management skills.</p>
         </div>
         <div class="images">
-        <img src="/images/reulock.jpg" alt="Projects">
+        <img src="./images/reulock.jpg" alt="Projects">
         </div>
     </section>
 
@@ -144,7 +144,7 @@
       <div  class="glue">
           <h3>Microcontrollers: Oscilloscope with PIC18F4550</h3>
           <div class="images">
-              <img class="smallImg1" src=./images/mcu.png alt="Projects">
+              <img class="smallImg1" src=./images/mcu.PNG alt="Projects">
           </div>
           <div class="content">
               <br><p>Our microcontroller project, following our courses in the subject, aimed to develop an oscilloscope and multimeter with PIC18F4550, using the Harvard architecture. Our team of three accomplished the following tasks for the multimeter: we initialized the CAN, set up ADC interrupt functions, performed millivolt conversion, displayed the results on a 7-segment display, and measured frequencies. As for the oscilloscope, we successfully implemented the trigger and running modes using a button interruption.</p>
@@ -167,7 +167,7 @@
       <div  class="glue">
           <h3>Web Project: Online Sales Site</h3>
           <div class="images">
-              <img class="smallImg" src=./images/wsc.png alt="Projects">
+              <img class="smallImg" src=./images/wsc.PNG alt="Projects">
           </div>
           <div class="content">
               <p>My web project involved developing an online object-selling site, offering three categories of purchases: regular internet sales, negotiation-based sales similar to Vinted, and auctions. To efficiently manage users, we created a database with profiles for administrators, sellers, and clients. For database management, we used XAMPP, which proved to be an effective tool. This project allowed us to apply our web development skills and create a dynamic and functional e-commerce platform.</p>
@@ -176,7 +176,7 @@
       <div  class="glue">
           <h3>Impulse Project: Campus of the Future</h3>
           <div class="images">
-              <img class="smallImg" src="images/campusConnecte.PNG" alt="Projects">
+              <img class="smallImg" src="./images/campusConnecte.PNG" alt="Projects">
           </div>
           <div class="content">
               <p>The "Impulse" project, lasting for a semester, was an enriching adventure with a team of six students. We chose to reinvent education by rethinking the campus of tomorrow, following the pandemic. Our key innovation was a smart board connected to classrooms and cameras, allowing flexible and individualized learning. This approach catered to the current needs of remote learning. The project enabled us to develop skills in collaboration, research, and innovative solution design. We are proud to have contributed to shaping the future of education with our concept of the connected campus.</p>
@@ -210,7 +210,7 @@
     <div  class="glue">
         <h3>Online POKEMON Card Game</h3>
         <div class="images">
-            <img class="smallImg" src="images/ecemon.png" alt="Projects">
+            <img class="smallImg" src="./images/ecemon.png" alt="Projects">
         </div>
         <div class="content">
             <p>Automobile Project ARECE: Vice-President of Communication and Prototyping at ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
