--- a/projets.html
+++ b/projets.html
@@ -74,7 +74,7 @@
 
     <section class="normal1">
         <div class="images">
-            <img src="/images/reulock.jpg" alt="Projets">
+            <img src="./images/reulock.jpg" alt="Projets">
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
@@ -87,7 +87,7 @@
             <p>En tant que <strong>chef de projet</strong>, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
         </div>
         <div class="images">
-            <img src="/images/reulock.jpg" alt="Projets">
+            <img src="./images/reulock.jpg" alt="Projets">
         </div>
     </section>
 
@@ -145,7 +145,7 @@
         <div  class="glue">
             <h3>Microcontrolleurs: Réaliser un oscilloscope avec PIC18F4550</h3>
             <div class="images">
-                <img class="smallImg1" src=./images/mcu.png alt="Projets">
+                <img class="smallImg1" src=./images/mcu.PNG alt="Projets">
             </div>
             <div class="content">
                 <br><p>Notre projet de microcontrôleur, réalisé suite à nos cours dans cette matière, consistait à développer un oscilloscope et un multimètre avec la PIC18F4550, en utilisant l'architecture Harvard. Notre équipe de trois personnes a accompli les étapes suivantes : pour le multimètre, nous avons initialisé le CAN, mis en place des fonctions d'interruption ADC, réalisé la conversion en millivolts, affiché les résultats sur un affichage 7 segments et mesuré les fréquences. Quant à l'oscilloscope, nous avons réussi à implémenter le mode de déclenchement et de fonctionnement à l'aide d'une interruption par bouton.</p>
@@ -168,7 +168,7 @@
         <div  class="glue">
             <h3>Projet Web : Site de vente en ligne</h3>
             <div class="images">
-                <img class="smallImg" src=./images/wsc.png alt="Projets">
+                <img class="smallImg" src=./images/wsc.PNG alt="Projets">
             </div>
             <div class="content">
                 <p>Mon projet web consistait à développer un site de vente d'objets en ligne, offrant trois catégories d'achats : la vente classique sur internet, la vente avec négociation similaire à Vinted, ainsi que la vente aux enchères. Pour gérer efficacement les utilisateurs, nous avons créé une base de données comprenant les profils d'administrateurs, de vendeurs et de clients. Pour faciliter la gestion de la base de données, nous avons utilisé XAMPP, qui s'est avéré être un outil efficace. Ce projet nous a permis de mettre en pratique nos compétences en développement web et de créer une plateforme d'e-commerce dynamique et fonctionnelle.</p>
@@ -177,7 +177,7 @@
         <div  class="glue">
             <h3>Projet Impulse : le campus connecté</h3>
             <div class="images">
-                <img class="smallImg" src="images/campusConnecte.PNG" alt="Projets">
+                <img class="smallImg" src="./images/campusConnecte.PNG" alt="Projets">
             </div>
             <div class="content">
                 <p>Le projet "Impulse", d'une durée d'un semestre, a été une aventure enrichissante en groupe de six étudiants. Nous avons choisi de réinventer l'éducation en repensant le campus connecté de demain, suite à la pandémie. Notre innovation clé était un tableau connecté aux salles de cours et caméras, permettant un apprentissage flexible et individuel. Cette approche répondait aux besoins actuels de l'apprentissage à distance. Le projet nous a permis de développer des compétences en collaboration, recherche et conception de solutions novatrices. Nous sommes fiers d'avoir contribué à façonner l'avenir de l'éducation avec notre idée du campus connecté.</p>
