--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -74,6 +74,7 @@
             <p class="texte1">Je suis à la recherche d'un stage dans le domaine de la défense à partir de février 2024, d'une durée de 6 mois. Je suis ouvert à toutes les propositions et prêt à relever de nouveaux défis. Idéalement, je souhaite trouver un stage en Île-de-France, mais je suis également disposé à envisager d'autres localisations.</p>
             <p class="texte2">Mon objectif est de trouver un environnement de travail qui me permette de mettre en pratique à la fois mes compétences techniques en électronique et mes compétences en gestion de projets. Je suis passionné par la recherche de solutions innovantes et je suis prêt à m'investir pleinement dans des projets qui combinent à la fois l'aspect technique et managérial.</p>
             <p class="texte3">Si vous avez des opportunités de stage correspondant à mes critères, je serais ravi d'en discuter avec vous. N'hésitez pas à me contacter pour toute information complémentaire ou pour échanger sur d'éventuelles collaborations.</p>
+            <p class="paragraphe"><em> <a href="./pdf/CV-RAVEL-Adrien.pdf" target="_blank">CV</a></em></p>
         </div>
         <video id="my-video" class="videoAccueil" src="videos/video.mov" controls preload="auto" autoplay loop muted playsinline></video>
     </section>
