--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -62,6 +62,7 @@
     <img class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
     <div class="content">
       <h2 class= "title">Introduction</h2>
+        <img id="imageAAA" class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
       <p>Passionate about electronics, I am currently a first-year Master's student at ECE (École Centrale d'Électronique) majoring in Embedded Systems. My enthusiasm for this field drives me to be consistently motivated, creative, and enjoy working in teams to find innovative solutions.</p>
       <p>Currently, I am doing an internship at Somfy as an application developer. This internship allows me to apply my programming knowledge and contribute to tangible projects in the field of embedded systems. I am fortunate to work on exciting projects that help me develop my skills and gain valuable experience.</p>
       <p>Outside of my studies and work, sports hold a significant place in my life. I have a passion for trail running and train diligently between 5 to 6 times a week. This demanding discipline allows me to push my limits, improve my performance, and find pleasure in competition.</p>
@@ -90,6 +91,10 @@
       <p class="texte8">This passion for sports reflects my thirst for exploring new horizons, pushing my limits, and experiencing new sensations. Each challenge represents an opportunity for me to surpass myself and live unique moments.</p>
     </div>
   </section>
+    <div id="carousel2" class="carousel">
+            <img src="images/sport1.jpg" alt="Image 1">
+            <img src="images/sport2.jpg" alt="Image 1">
+        </div>
   <br><br>
 </main>
 
