--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -62,6 +62,7 @@
         <img class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
         <div class="content">
             <h2 class= "title">Présentation</h2>
+            <img id="imageAAA" class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
             <p>Je m'appelle Adrien RAVEL. Passionné par l'électronique, je suis actuellement étudiant en Master 1 à l'ECE (École Centrale d'Électronique) dans la majeure des systèmes embarqués. Ma passion pour ce domaine me pousse à être constamment motivé, créatif et à apprécier le travail en équipe pour trouver des solutions innovantes.</p>
             <p>En ce moment, je suis en stage chez Somfy en tant que développeur d'une application. Ce stage me permet de mettre en pratique mes connaissances en programmation et de contribuer à des projets concrets dans le domaine des systèmes embarqués. J'ai la chance de travailler sur des projets passionnants qui m'aident à développer mes compétences et à acquérir une expérience précieuse.</p>
             <p>En dehors de mes études et de mon travail, le sport occupe une place importante dans ma vie. Je suis passionné de trail et je m'entraîne assidûment entre 5 et 6 fois par semaine. Cette discipline exigeante me permet de me dépasser, d'améliorer mes performances et de trouver du plaisir dans la compétition.</p>
@@ -74,7 +75,7 @@
             <p class="texte1">Je suis à la recherche d'un stage dans le domaine de la défense à partir de février 2024, d'une durée de 6 mois. Je suis ouvert à toutes les propositions et prêt à relever de nouveaux défis. Idéalement, je souhaite trouver un stage en Île-de-France, mais je suis également disposé à envisager d'autres localisations.</p>
             <p class="texte2">Mon objectif est de trouver un environnement de travail qui me permette de mettre en pratique à la fois mes compétences techniques en électronique et mes compétences en gestion de projets. Je suis passionné par la recherche de solutions innovantes et je suis prêt à m'investir pleinement dans des projets qui combinent à la fois l'aspect technique et managérial.</p>
             <p class="texte3">Si vous avez des opportunités de stage correspondant à mes critères, je serais ravi d'en discuter avec vous. N'hésitez pas à me contacter pour toute information complémentaire ou pour échanger sur d'éventuelles collaborations.</p>
-            <p class="paragraphe"><em> <a href="./pdf/CV-RAVEL-Adrien.pdf" target="_blank">CV</a></em></p>
+            <p class="paragraphe"><em><a href="./pdf/CV-RAVEL-Adrien.pdf" target="_blank">Téléchargez mon CV</a></em></p>
         </div>
         <video id="my-video" class="videoAccueil" src="videos/video.mov" controls preload="auto" autoplay loop muted playsinline></video>
     </section>
@@ -92,6 +93,10 @@
             <p class="texte8">Cette passion pour le sport est le reflet de ma soif d'explorer de nouveaux horizons, de me dépasser et de découvrir de nouvelles sensations. Chaque défi représente pour moi une opportunité de repousser mes limites et de vivre des moments uniques.</p>
         </div>
     </section>
+        <div id="carousel2" class="carousel">
+            <img src="images/sport1.jpg" alt="Image 1">
+            <img src="images/sport2.jpg" alt="Image 1">
+        </div>
     <br><br>
 </main>
 
