--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -63,18 +63,18 @@
         <div class="content">
             <h2 class= "title">Présentation</h2>
             <img id="imageAAA" class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
-            <p>Je m'appelle Adrien RAVEL. Passionné par l'électronique, je suis actuellement étudiant en Master 1 à l'ECE (École Centrale d'Électronique) dans la majeure des systèmes embarqués. Ma passion pour ce domaine me pousse à être constamment motivé, créatif et à apprécier le travail en équipe pour trouver des solutions innovantes.</p>
-            <p>En ce moment, je suis en stage chez Somfy en tant que développeur d'une application. Ce stage me permet de mettre en pratique mes connaissances en programmation et de contribuer à des projets concrets dans le domaine des systèmes embarqués. J'ai la chance de travailler sur des projets passionnants qui m'aident à développer mes compétences et à acquérir une expérience précieuse.</p>
-            <p>En dehors de mes études et de mon travail, le sport occupe une place importante dans ma vie. Je suis passionné de trail et je m'entraîne assidûment entre 5 et 6 fois par semaine. Cette discipline exigeante me permet de me dépasser, d'améliorer mes performances et de trouver du plaisir dans la compétition.</p>
+            <p>Je m'appelle Adrien RAVEL. Passionné par l'électronique, je suis actuellement étudiant en M2 à l'ECE (École Centrale d'Électronique) dans la majeure des systèmes embarqués. Ma passion pour ce domaine me pousse à être motivé, créatif et à apprécier le travail en équipe pour trouver des solutions innovantes.</p>
+            <p>Je viens de terminer un stage chez SOMFY en tant que développeur software. Ce stage m'a permis de mettre en pratique mes connaissances en programmation et de contribuer à des projets concrets. </p>
+            <p>En dehors de mes études et de mon travail, le sport occupe une place importante dans ma vie. Je suis passionné de trail et je m'entraine entre 5 et 6 fois par semaine. Cette discipline exigeante me permet de me surpasser, d'améliorer mes performances et de décompresser.</p>
         </div>
     </section>
     <br>
     <section id="stage">
         <div class="content">
             <h2 class="RechercheStage">Recherche de Stage</h2>
-            <p class="texte1">Je suis à la recherche d'un stage dans le domaine de la défense à partir de février 2024, d'une durée de 6 mois. Je suis ouvert à toutes les propositions et prêt à relever de nouveaux défis. Idéalement, je souhaite trouver un stage en Île-de-France, mais je suis également disposé à envisager d'autres localisations.</p>
+            <p class="texte1">Je suis à la recherche d'un stage dans le domaine de la défense à partir de février 2024 et pour une durée de 6 mois. Je suis ouvert à toutes les propositions et prêt à relever de nouveaux défis. Idéalement, je souhaite trouver un stage en Île-de-France, mais je suis ouvert à toutes propositions.</p>
             <p class="texte2">Mon objectif est de trouver un environnement de travail qui me permette de mettre en pratique à la fois mes compétences techniques en électronique et mes compétences en gestion de projets. Je suis passionné par la recherche de solutions innovantes et je suis prêt à m'investir pleinement dans des projets qui combinent à la fois l'aspect technique et managérial.</p>
-            <p class="texte3">Si vous avez des opportunités de stage correspondant à mes critères, je serais ravi d'en discuter avec vous. N'hésitez pas à me contacter pour toute information complémentaire ou pour échanger sur d'éventuelles collaborations.</p>
+            <p class="texte3">Si vous avez des opportunités de stage correspondant à mes critères, je serais ravi d'en discuter avec vous. N'hésitez pas à me contacter pour toutes informations complémentaires.</p>
             <p class="paragraphe"><em><a href="./pdf/CV-RAVEL-Adrien.pdf" target="_blank">Téléchargez mon CV</a></em></p>
         </div>
         <video id="my-video" class="videoAccueil" src="videos/video.mov" controls preload="auto" autoplay loop muted playsinline></video>
@@ -89,7 +89,7 @@
             <h2 class="texte4">Actualités : des défis sportifs sans limites</h2>
             <p class="texte5">Dans le cadre de ma saison sportive 2022, j'ai entrepris trois grands objectifs : le Marathon de Séoul, les 60 km de Nice en courant et les 80 km de la SaintéLyon. Malheureusement, l'annulation du marathon de Séoul deux semaines avant ma participation a été un obstacle inattendu. Néanmoins, j'ai relevé avec détermination les autres défis, atteignant ainsi 2/3 de mes objectifs.</p>
             <p class="texte6">En poursuivant sur ma lancée, la saison 2023 m'a déjà réservé des moments intenses avec les 80 km de l'Écotrail de Paris, une expérience époustouflante que j'ai fièrement accomplie. </p>
-            <p class="texte7">Les prochains défis qui m'attendent sont les 43 km dans les volcans d'Auvergne, suivis du mythique GR20, un parcours de 180 km en 5 jours. Mais mon ambition ne s'arrête pas là : je suis également déterminé à participer au 10 km route de Paris, au semi-marathon de Paris, au marathon de Paris en avril, et enfin au marathon pour tous des JO en août 2024.</p>
+            <p class="texte7">Les prochains défis qui m'attendent sont le 10 km route de Paris, au semi-marathon de Paris, au marathon de Paris en avril 2024, et enfin au marathon pour tous des JO en juillet 2024.</p>
             <p class="texte8">Cette passion pour le sport est le reflet de ma soif d'explorer de nouveaux horizons, de me dépasser et de découvrir de nouvelles sensations. Chaque défi représente pour moi une opportunité de repousser mes limites et de vivre des moments uniques.</p>
         </div>
     </section>
