--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -63,17 +63,17 @@
     <div class="content">
       <h2 class= "title">Introduction</h2>
         <img id="imageAAA" class="imageAcceuil" src="images/photoAdrienRectangle.jpg" alt="Image de stage">
-      <p>Passionate about electronics, I am currently a first-year Master's student at ECE (École Centrale d'Électronique) majoring in Embedded Systems. My enthusiasm for this field drives me to be consistently motivated, creative, and enjoy working in teams to find innovative solutions.</p>
-      <p>Currently, I am doing an internship at Somfy as an application developer. This internship allows me to apply my programming knowledge and contribute to tangible projects in the field of embedded systems. I am fortunate to work on exciting projects that help me develop my skills and gain valuable experience.</p>
-      <p>Outside of my studies and work, sports hold a significant place in my life. I have a passion for trail running and train diligently between 5 to 6 times a week. This demanding discipline allows me to push my limits, improve my performance, and find pleasure in competition.</p>
+      <p>Passionate about electronics, I am currently an M2 student at ECE (École Centrale d'Électronique) specializing in embedded systems. My enthusiasm for this field drives me to always be motivated, creative, and enjoy working in teams.</p>
+      <p>Currently,I have recently done an internship at SOMFY group as a software engineer. This internship allowed me to apply my programming knowledge. I enjoy working on exciting projects that will help me develop my skills and gain valuable experience.</p>
+      <p>Outside of my studies and work, sports hold a significant place in my life. I have a passion for trail running and I train myself between 5 to 6 times a week. This demanding discipline allows me to push my limits, improve my performance, and find pleasure in competition.</p>
     </div>
   </section>
   <section id="stage">
     <div class="content">
       <h2 class="RechercheStage">Internship Search</h2>
       <p class="texte1">I am currently looking for a 6-month internship in the defense sector starting from February 2024. I am open to all opportunities and ready to take on new challenges. Ideally, I would like to find an internship in the Île-de-France region, but I am also willing to consider other locations.</p>
-      <p class="texte2">My aim is to find a work environment that allows me to apply both my technical skills in electronics and my project management skills. I am passionate about finding innovative solutions and I am eager to fully commit to projects that combine both the technical and managerial aspects.</p>
-      <p class="texte3">If you have any internship opportunities that match my criteria, I would be delighted to discuss them with you. Please feel free to contact me for any additional information or to discuss potential collaborations.</p>
+      <p class="texte2">My aim is to find a work environment that allows me to apply my technical skills in electronics and my project management skills.</p>
+      <p class="texte3">If you have any internship opportunities that match with my criteria, I would be delighted to discuss them with you. Please feel free to contact me for any additional information or to discuss potential collaborations.</p>
     </div>
     <video id="my-video" class="videoAccueil" src="videos/video.mov" controls preload="auto" autoplay loop muted playsinline></video>
   </section>
@@ -85,9 +85,9 @@
     </div>
     <div class="content">
       <h2 class="texte4">News: Limitless Sporting Challenges</h2>
-      <p class="texte5">As part of my 2022 sports season, I embarked on three major goals: the Seoul Marathon, the 60 km run in Nice, and the 80 km SaintéLyon race. Unfortunately, the cancellation of the Seoul Marathon two weeks before my participation was an unexpected obstacle. Nevertheless, I tackled the other challenges with determination, successfully completing 2 out of 3 of my objectives.</p>
-      <p class="texte6">Continuing on my journey, the 2023 season has already brought intense moments with the 80 km Ecotrail de Paris, an awe-inspiring experience that I proudly accomplished.</p>
-      <p class="texte7">The next challenges awaiting me are the 43 km run in the volcanoes of Auvergne, followed by the mythical GR20, a 180 km trail to be completed in 5 days. But my ambition doesn't stop there: I am also determined to participate in the Paris 10 km road race, the Paris Half Marathon, the Paris Marathon in April, and finally, the Marathon For All of the Olympics in August 2024.</p>
+      <p class="texte5">As part of my 2022 sports season, I embarked on three major goals: the Seoul Marathon, the 60 km run in Nice, and the 80 km SaintéLyon race. Unfortunately, the cancellation of the Seoul Marathon two weeks before my participation was an unexpected obstacle. Nevertheless, I tackled the other challenges with determination, and I successfully completed them.</p>
+      <p class="texte6">Continuing on my journey, the 2023 season has already brought intense moments with the 80 km Ecotrail de Paris, an experience that I proudly accomplished.</p>
+      <p class="texte7">The next challenge awaiting me is the 80 km run in Millau. Moreover my ambition doesn't stop there: I am also determined to participate in the Paris 10 km road race, the Paris Half Marathon, the Paris Marathon in April, and finally, the Marathon For All of the Olympics in August 2024.</p>
       <p class="texte8">This passion for sports reflects my thirst for exploring new horizons, pushing my limits, and experiencing new sensations. Each challenge represents an opportunity for me to surpass myself and live unique moments.</p>
     </div>
   </section>
